script_engine/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statementlist
Rule 1     statementlist -> statement
Rule 2     statementlist -> statementlist statement
Rule 3     statementblock -> LBRACE statementlist RBRACE
Rule 4     statement -> IF expression statementblock ENDIF
Rule 5     statement -> IF expression statementblock ELSE statementblock ENDIF
Rule 6     statement -> PRINT expression SEMI
Rule 7     statement -> identifierchain ASSIGN expression SEMI
Rule 8     statement -> identifierchain LPAREN expressionlist RPAREN SEMI
Rule 9     statement -> identifierchain LPAREN RPAREN SEMI
Rule 10    expressionlist -> expression
Rule 11    expressionlist -> expressionlist COMMA expression
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression TIMES expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> expression EQUALS expression
Rule 17    expression -> expression GT expression
Rule 18    expression -> expression LT expression
Rule 19    expression -> expression GE expression
Rule 20    expression -> expression LE expression
Rule 21    expression -> NUMBER
Rule 22    expression -> STRING
Rule 23    identifierchain -> IDENTIFIER
Rule 24    identifierchain -> IDENTIFIER DOT identifierchain
Rule 25    expression -> identifierchain
Rule 26    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

ASSIGN               : 7
COMMA                : 11
DIVIDE               : 15
DOT                  : 24
ELSE                 : 5
ENDIF                : 4 5
EQUALS               : 16
GE                   : 19
GT                   : 17
IDENTIFIER           : 23 24
IF                   : 4 5
LBRACE               : 3
LE                   : 20
LPAREN               : 8 9 26
LT                   : 18
MINUS                : 13
NUMBER               : 21
PLUS                 : 12
PRINT                : 6
RBRACE               : 3
RPAREN               : 8 9 26
SEMI                 : 6 7 8 9
STRING               : 22
TIMES                : 14
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 7 10 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 26
expressionlist       : 8 11
identifierchain      : 7 8 9 24 25
statement            : 1 2
statementblock       : 4 5 5
statementlist        : 2 3 0

Parsing method: LALR

state 0

    (0) S' -> . statementlist
    (1) statementlist -> . statement
    (2) statementlist -> . statementlist statement
    (4) statement -> . IF expression statementblock ENDIF
    (5) statement -> . IF expression statementblock ELSE statementblock ENDIF
    (6) statement -> . PRINT expression SEMI
    (7) statement -> . identifierchain ASSIGN expression SEMI
    (8) statement -> . identifierchain LPAREN expressionlist RPAREN SEMI
    (9) statement -> . identifierchain LPAREN RPAREN SEMI
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    IF              shift and go to state 6
    PRINT           shift and go to state 4
    IDENTIFIER      shift and go to state 5

    statementlist                  shift and go to state 2
    statement                      shift and go to state 3
    identifierchain                shift and go to state 1

state 1

    (7) statement -> identifierchain . ASSIGN expression SEMI
    (8) statement -> identifierchain . LPAREN expressionlist RPAREN SEMI
    (9) statement -> identifierchain . LPAREN RPAREN SEMI

    ASSIGN          shift and go to state 8
    LPAREN          shift and go to state 7


state 2

    (0) S' -> statementlist .
    (2) statementlist -> statementlist . statement
    (4) statement -> . IF expression statementblock ENDIF
    (5) statement -> . IF expression statementblock ELSE statementblock ENDIF
    (6) statement -> . PRINT expression SEMI
    (7) statement -> . identifierchain ASSIGN expression SEMI
    (8) statement -> . identifierchain LPAREN expressionlist RPAREN SEMI
    (9) statement -> . identifierchain LPAREN RPAREN SEMI
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    IF              shift and go to state 6
    PRINT           shift and go to state 4
    IDENTIFIER      shift and go to state 5

    statement                      shift and go to state 9
    identifierchain                shift and go to state 1

state 3

    (1) statementlist -> statement .

    IF              reduce using rule 1 (statementlist -> statement .)
    PRINT           reduce using rule 1 (statementlist -> statement .)
    IDENTIFIER      reduce using rule 1 (statementlist -> statement .)
    $end            reduce using rule 1 (statementlist -> statement .)
    RBRACE          reduce using rule 1 (statementlist -> statement .)


state 4

    (6) statement -> PRINT . expression SEMI
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 13
    identifierchain                shift and go to state 12

state 5

    (23) identifierchain -> IDENTIFIER .
    (24) identifierchain -> IDENTIFIER . DOT identifierchain

    ASSIGN          reduce using rule 23 (identifierchain -> IDENTIFIER .)
    LPAREN          reduce using rule 23 (identifierchain -> IDENTIFIER .)
    SEMI            reduce using rule 23 (identifierchain -> IDENTIFIER .)
    PLUS            reduce using rule 23 (identifierchain -> IDENTIFIER .)
    MINUS           reduce using rule 23 (identifierchain -> IDENTIFIER .)
    TIMES           reduce using rule 23 (identifierchain -> IDENTIFIER .)
    DIVIDE          reduce using rule 23 (identifierchain -> IDENTIFIER .)
    EQUALS          reduce using rule 23 (identifierchain -> IDENTIFIER .)
    GT              reduce using rule 23 (identifierchain -> IDENTIFIER .)
    LT              reduce using rule 23 (identifierchain -> IDENTIFIER .)
    GE              reduce using rule 23 (identifierchain -> IDENTIFIER .)
    LE              reduce using rule 23 (identifierchain -> IDENTIFIER .)
    LBRACE          reduce using rule 23 (identifierchain -> IDENTIFIER .)
    RPAREN          reduce using rule 23 (identifierchain -> IDENTIFIER .)
    COMMA           reduce using rule 23 (identifierchain -> IDENTIFIER .)
    DOT             shift and go to state 15


state 6

    (4) statement -> IF . expression statementblock ENDIF
    (5) statement -> IF . expression statementblock ELSE statementblock ENDIF
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 16
    identifierchain                shift and go to state 12

state 7

    (8) statement -> identifierchain LPAREN . expressionlist RPAREN SEMI
    (9) statement -> identifierchain LPAREN . RPAREN SEMI
    (10) expressionlist -> . expression
    (11) expressionlist -> . expressionlist COMMA expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    RPAREN          shift and go to state 17
    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 19
    expressionlist                 shift and go to state 18
    identifierchain                shift and go to state 12

state 8

    (7) statement -> identifierchain ASSIGN . expression SEMI
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 20
    identifierchain                shift and go to state 12

state 9

    (2) statementlist -> statementlist statement .

    IF              reduce using rule 2 (statementlist -> statementlist statement .)
    PRINT           reduce using rule 2 (statementlist -> statementlist statement .)
    IDENTIFIER      reduce using rule 2 (statementlist -> statementlist statement .)
    $end            reduce using rule 2 (statementlist -> statementlist statement .)
    RBRACE          reduce using rule 2 (statementlist -> statementlist statement .)


state 10

    (21) expression -> NUMBER .

    PLUS            reduce using rule 21 (expression -> NUMBER .)
    MINUS           reduce using rule 21 (expression -> NUMBER .)
    TIMES           reduce using rule 21 (expression -> NUMBER .)
    DIVIDE          reduce using rule 21 (expression -> NUMBER .)
    EQUALS          reduce using rule 21 (expression -> NUMBER .)
    GT              reduce using rule 21 (expression -> NUMBER .)
    LT              reduce using rule 21 (expression -> NUMBER .)
    GE              reduce using rule 21 (expression -> NUMBER .)
    LE              reduce using rule 21 (expression -> NUMBER .)
    SEMI            reduce using rule 21 (expression -> NUMBER .)
    LBRACE          reduce using rule 21 (expression -> NUMBER .)
    RPAREN          reduce using rule 21 (expression -> NUMBER .)
    COMMA           reduce using rule 21 (expression -> NUMBER .)


state 11

    (26) expression -> LPAREN . expression RPAREN
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 21
    identifierchain                shift and go to state 12

state 12

    (25) expression -> identifierchain .

    PLUS            reduce using rule 25 (expression -> identifierchain .)
    MINUS           reduce using rule 25 (expression -> identifierchain .)
    TIMES           reduce using rule 25 (expression -> identifierchain .)
    DIVIDE          reduce using rule 25 (expression -> identifierchain .)
    EQUALS          reduce using rule 25 (expression -> identifierchain .)
    GT              reduce using rule 25 (expression -> identifierchain .)
    LT              reduce using rule 25 (expression -> identifierchain .)
    GE              reduce using rule 25 (expression -> identifierchain .)
    LE              reduce using rule 25 (expression -> identifierchain .)
    SEMI            reduce using rule 25 (expression -> identifierchain .)
    LBRACE          reduce using rule 25 (expression -> identifierchain .)
    RPAREN          reduce using rule 25 (expression -> identifierchain .)
    COMMA           reduce using rule 25 (expression -> identifierchain .)


state 13

    (6) statement -> PRINT expression . SEMI
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . GT expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GE expression
    (20) expression -> expression . LE expression

    SEMI            shift and go to state 25
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 24
    EQUALS          shift and go to state 26
    GT              shift and go to state 22
    LT              shift and go to state 28
    GE              shift and go to state 23
    LE              shift and go to state 29


state 14

    (22) expression -> STRING .

    PLUS            reduce using rule 22 (expression -> STRING .)
    MINUS           reduce using rule 22 (expression -> STRING .)
    TIMES           reduce using rule 22 (expression -> STRING .)
    DIVIDE          reduce using rule 22 (expression -> STRING .)
    EQUALS          reduce using rule 22 (expression -> STRING .)
    GT              reduce using rule 22 (expression -> STRING .)
    LT              reduce using rule 22 (expression -> STRING .)
    GE              reduce using rule 22 (expression -> STRING .)
    LE              reduce using rule 22 (expression -> STRING .)
    SEMI            reduce using rule 22 (expression -> STRING .)
    LBRACE          reduce using rule 22 (expression -> STRING .)
    RPAREN          reduce using rule 22 (expression -> STRING .)
    COMMA           reduce using rule 22 (expression -> STRING .)


state 15

    (24) identifierchain -> IDENTIFIER DOT . identifierchain
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    IDENTIFIER      shift and go to state 5

    identifierchain                shift and go to state 32

state 16

    (4) statement -> IF expression . statementblock ENDIF
    (5) statement -> IF expression . statementblock ELSE statementblock ENDIF
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . GT expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GE expression
    (20) expression -> expression . LE expression
    (3) statementblock -> . LBRACE statementlist RBRACE

    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 24
    EQUALS          shift and go to state 26
    GT              shift and go to state 22
    LT              shift and go to state 28
    GE              shift and go to state 23
    LE              shift and go to state 29
    LBRACE          shift and go to state 34

    statementblock                 shift and go to state 33

state 17

    (9) statement -> identifierchain LPAREN RPAREN . SEMI

    SEMI            shift and go to state 35


state 18

    (8) statement -> identifierchain LPAREN expressionlist . RPAREN SEMI
    (11) expressionlist -> expressionlist . COMMA expression

    RPAREN          shift and go to state 36
    COMMA           shift and go to state 37


state 19

    (10) expressionlist -> expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . GT expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GE expression
    (20) expression -> expression . LE expression

    RPAREN          reduce using rule 10 (expressionlist -> expression .)
    COMMA           reduce using rule 10 (expressionlist -> expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 24
    EQUALS          shift and go to state 26
    GT              shift and go to state 22
    LT              shift and go to state 28
    GE              shift and go to state 23
    LE              shift and go to state 29


state 20

    (7) statement -> identifierchain ASSIGN expression . SEMI
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . GT expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GE expression
    (20) expression -> expression . LE expression

    SEMI            shift and go to state 38
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 24
    EQUALS          shift and go to state 26
    GT              shift and go to state 22
    LT              shift and go to state 28
    GE              shift and go to state 23
    LE              shift and go to state 29


state 21

    (26) expression -> LPAREN expression . RPAREN
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . GT expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GE expression
    (20) expression -> expression . LE expression

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 24
    EQUALS          shift and go to state 26
    GT              shift and go to state 22
    LT              shift and go to state 28
    GE              shift and go to state 23
    LE              shift and go to state 29


state 22

    (17) expression -> expression GT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 40
    identifierchain                shift and go to state 12

state 23

    (19) expression -> expression GE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 41
    identifierchain                shift and go to state 12

state 24

    (15) expression -> expression DIVIDE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 42
    identifierchain                shift and go to state 12

state 25

    (6) statement -> PRINT expression SEMI .

    RBRACE          reduce using rule 6 (statement -> PRINT expression SEMI .)
    IF              reduce using rule 6 (statement -> PRINT expression SEMI .)
    PRINT           reduce using rule 6 (statement -> PRINT expression SEMI .)
    IDENTIFIER      reduce using rule 6 (statement -> PRINT expression SEMI .)
    $end            reduce using rule 6 (statement -> PRINT expression SEMI .)


state 26

    (16) expression -> expression EQUALS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 43
    identifierchain                shift and go to state 12

state 27

    (14) expression -> expression TIMES . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 44
    identifierchain                shift and go to state 12

state 28

    (18) expression -> expression LT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 45
    identifierchain                shift and go to state 12

state 29

    (20) expression -> expression LE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 46
    identifierchain                shift and go to state 12

state 30

    (12) expression -> expression PLUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 47
    identifierchain                shift and go to state 12

state 31

    (13) expression -> expression MINUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . NUMBER
    (22) expression -> . STRING
    (25) expression -> . identifierchain
    (26) expression -> . LPAREN expression RPAREN
    (23) identifierchain -> . IDENTIFIER
    (24) identifierchain -> . IDENTIFIER DOT identifierchain

    NUMBER          shift and go to state 10
    STRING          shift and go to state 14
    LPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 5

    expression                     shift and go to state 48
    identifierchain                shift and go to state 12

state 32

    (24) identifierchain -> IDENTIFIER DOT identifierchain .
